@startuml starbet-live

entity AppUser {
    * id: <<uuid>>
    ---
    * username: text
    * email: text
    * name: text
    * surname: text
    * profile_picture: <<url>>
    * password_hash: text
    * balance: int
    * created_at: <<date>>
    * edited_at: <<date>>
    deleted_at: <<date>>
}

enum GameGenre {
    MOBA
    FPS
}

entity Game {
    * id: <<uuid>>
    ---
    * name: text
    * description: text
    * logo: <<url>>
    * genre: Genre
    * created_at: <<date>>
    * edited_at: <<date>>
    deleted_at: <<date>>
}

enum GameMatchStatus {
    PENDING
    LIVE
    FINISHED
    CANCELED
}

enum GameMatchOutcome {
    WIN_A
    WIN_B
    DRAW
}

entity GameMatch {
    * id: <<uuid>>
    ---
    * game_id: <<FK: Game>>
    ---
    * name_a: text
    * name_b: text
    * starts_at: <<date>>
    * ends_at: <<date>>
    * status: GameMatchStatus
    outcome: GameMatchOutcome
    * created_at: <<date>>
    * edited_at: <<date>>
    deleted_at: <<date>>
}

entity Odds {
    * id: <<uuid>>
    ---
    * game_match_id: <<FK: GameMatch>>
    ---
    * odds_a: float
    * odds_b: float
    * created_at: <<date>>
    deleted_at: <<date>>
}

enum BetStatus {
    PENDING
    WON
    LOST
    CANCELED
}

entity Bet {
    * id: <<uuid>>
    ---
    * app_user_id: <<FK: AppUser>>
    * game_match_id: <<FK: GameMatch>>
    ---
    * amount: int
    * status: BetStatus
    * expected_outcome: GameMatchOutcome
    * created_at: <<date>>
    * edited_at: <<date>>
    deleted_at: <<date>>
}

enum Currency {
    CZK
    EUR
    USD
}

enum MoneyTransactionStatus {
    PENDING
    COMPLETED
    CANCELED
}

entity MoneyTransaction {
    * id: <<uuid>>
    ---
    * app_user_id: <<FK: AppUser>>
    ---
    * status: MoneyTransactionStatus
    * amount_tokens: int
    * amount_currency: float
    * currency: Currency
    * deposit: bool
    * created_at: <<date>>
}

GameMatch }o--|| Game
GameMatch ||--o{ Bet
GameMatch ||--o{ Odds
GameMatch -- GameMatchStatus
GameMatch -- GameMatchOutcome
AppUser ||--o{ Bet
AppUser ||--o{ MoneyTransaction
Game -- GameGenre
MoneyTransaction -- Currency
MoneyTransaction -- MoneyTransactionStatus 
Bet -- BetStatus
Bet -- GameMatchOutcome

@enduml
